change of the response object for assistance